# lsp-max

./: .anti-llm-ignore  .gitignore  .lsp.json  .mcp.json  AGENTS.md  CHAIN-THEORY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEFINITION_OF_DONE.md  DOC_COVERAGE_LOG.md  GETTING_STARTED.md  Justfile  ORIGINAL_REQUEST.md  PROJECT.md  README.md  ROADMAP.md  THESIS.md  detect_capabilities.py  fix_deps.py  gen.toml  generate_baseline.py  lsp-max.toml  package.toml  refund_receipt.txt  rustfmt.toml  test_out.txt
.claude/: setup.sh  (+2 more)
crates/anti-llm-cheat-lsp/: CLAUDE.md  Cargo.toml  README.md  admissibility_report.md  anti.toml
crates/anti-llm-cheat-lsp/docs/: COVERAGE_LSP318_LSIF06.md
crates/anti-llm-cheat-lsp/ocel/: anti_llm_lsp_ocel.receipt.json
crates/anti-llm-cheat-lsp/receipts/: _logTrace_receipt.json  _progress_receipt.json  _setTrace_receipt.json  client_unregisterCapability_receipt.json  codeAction_resolve_receipt.json  code_lens_resolve_receipt.json  command_tooltips_receipt.json  debug_message_kind_receipt.json  exit_receipt.json  folding_range_refresh_receipt.json  initialize_receipt.json  lsp318_combinatorial_maximalism_receipt.json  notebookDocument_didClose_refusal_receipt.json  notebookDocument_didOpen_refusal_receipt.json  notebookDocument_didSave_refusal_receipt.json  nullable_active_parameter_receipt.json  process_model_receipt.json  ranges_formatting_receipt.json  relative_patterns_receipt.json  shutdown_receipt.json  telemetry_event_receipt.json  textDocument_codeAction_receipt.json  textDocument_colorPresentation_receipt.json  textDocument_diagnostic_receipt.json  textDocument_didChange_receipt.json  textDocument_didClose_receipt.json  textDocument_documentHighlight_receipt.json  textDocument_documentLink_receipt.json  textDocument_documentSymbol_receipt.json  textDocument_foldingRange_receipt.json  textDocument_formatting_receipt.json  textDocument_hover_receipt.json  textDocument_inlayHint_receipt.json  textDocument_linkedEditingRange_receipt.json  textDocument_prepareRename_receipt.json  textDocument_prepareTypeHierarchy_receipt.json  textDocument_rangeFormatting_receipt.json  textDocument_references_receipt.json  textDocument_rename_receipt.json  textDocument_semanticTokens_full_delta_receipt.json  (+20 more)
crates/anti-llm-cheat-lsp/src/: ast_adapter.rs  capabilities.rs  config.rs  diagnostics.rs  engine.rs  innovations.rs  lib.rs  main.rs  ocel.rs  semantic.rs  server.rs
crates/anti-llm-cheat-lsp/tests/: api_reconciliation_test.rs  dogfood.rs  innovations_test.rs
crates/lsp-max-adapters/lsp-max-ast/: Cargo.toml
crates/lsp-max-andon/: Cargo.toml
crates/lsp-max-andon/src/: andon.rs  lib.rs  lsp.rs  patterns.rs  test.rs
crates/lsp-max-anti-cheat/: Cargo.toml  README.md
crates/lsp-max-anti-cheat-cli/: Cargo.toml  README.md  default-anti-llm.toml
crates/lsp-max-anti-cheat-cli/src/: lib.rs  main.rs
crates/lsp-max-anti-cheat/src/: diagnostics.rs  engine.rs  engine.rs.bak  lib.rs
crates/lsp-max-cli/: CLAUDE.md  Cargo.toml
crates/lsp-max-cli/src/: lib.rs  main.rs
crates/lsp-max-compositor/: CLAUDE.md  Cargo.toml  compositor.ttl  ggen.toml  registry_init.tera
crates/lsp-max-compositor-routing/: Cargo.toml
crates/lsp-max-compositor-routing/src/: config.rs  fanout.rs  lib.rs  registry.rs
crates/lsp-max-compositor-routing/tests/: routing_integration.rs
crates/lsp-max-compositor/benches/: compositor_backpressure.rs  compositor_fanout.rs  compositor_micro.rs  process_mining.rs
crates/lsp-max-compositor/receipts/: multi_lsp_per_extension_receipt.json
crates/lsp-max-compositor/src/: andon_snapshot.rs  capability_merge.rs  child_process.rs  compositor_client.rs  config.rs  connections.rs  declare.rs  dfg.rs  diagnostic_buffer.rs  dt_context.rs  endpoint.rs  endpoint_descriptor.rs  fanout.rs  fanout_coordinator.rs  flush_coordinator.rs  gate_cli_compat.rs  gate_file.rs  lib.rs  main.rs  merge.rs  mesh.rs  receipt.rs  receipt_chain.rs  registry.rs  registry_init.rs  routing.rs  server.rs
crates/lsp-max-compositor/tests/: cc_007_lsif_routing.rs  e2e.rs  fanout_latency.rs  gate_path_roundtrip_witness.rs  integration.rs  routing_integration.rs  speciation.rs  v26_6_28_gate_tests.rs
crates/lsp-max-compositor/transcripts/: multi_lsp_per_extension.txt
crates/lsp-max-gen/: Cargo.toml
crates/lsp-max-gen/src/: engine.rs  generator.rs  ggen_adapter.rs  lib.rs  manifest.rs  receipt_generator.rs  registry.rs  testmatrix_generator.rs
crates/lsp-max-lsif/: Cargo.toml
crates/lsp-max-lsif/src/: coverage.rs  db.rs  lib.rs  lsif.rs  lsif_builder.rs  lsif_indexer.rs  lsif_store.rs  lsif_types.rs  salsa_db.rs
crates/lsp-max-lsif/tests/: indexer_rust.rs  indexer_typescript.rs  lsif_conformance_tests.rs  salsa_stress_test.rs  sparql_query.rs  stress_test.rs
crates/lsp-max-mcp/: Cargo.toml
crates/lsp-max-mcp/src/: main.rs
crates/lsp-max-meta/: Cargo.toml
crates/lsp-max-meta/src/: backend.rs  lib.rs  main.rs  scanner.rs
crates/test-analyzer/: Cargo.toml
crates/test-analyzer/src/: lib.rs  main.rs
crates/tower-lsp-max-cli/: Cargo.toml  refund_receipt.txt
crates/tower-lsp-max-cli/src/: main.rs
crates/wasm4pm-lsp/: Cargo.toml
crates/wasm4pm-lsp/src/: main.rs
crates/wasm4pm-lsp/tests/: dogfood_gc005.rs  dogfood_gc006_calver.rs
examples/lsp-max-scaffold/: AGENTS.md  Cargo.toml  gen.toml
examples/lsp-max-scaffold/docs/: RVD.md
examples/lsp-max-scaffold/ontology/: scaffold.ttl
examples/lsp-max-scaffold/receipts/: text_document_did_open.json
examples/lsp-max-scaffold/src/: analyzer.rs  diagnostics.rs  law.rs  lib.rs  main.rs  server.rs  session_conformance.rs  verifiable.rs
examples/lsp-max-scaffold/tests/: conformance.rs  session_conformance.rs  verifiable.rs
examples/wasm-lsp/: Cargo.toml  gen.toml
lsp-max-agent/: Cargo.toml
lsp-max-macros/: Cargo.toml  scratch.rs
lsp-max-macros/src/: lib.rs
lsp-max-protocol/: Cargo.toml
lsp-max-protocol/src/: conformance.rs  core.rs  custom_methods.rs  diagnostics.rs  explain.rs  intent.rs  lib.rs  lsp_3_18.rs  phase.rs  pipeline.rs  repair.rs  request_impls.rs  stream.rs
(+1145 files in other folders)
