[package]
name = "lsp-max-agent"
version = "26.6.9"
edition = "2021"
description = "Agent integration and analysis bundles for lsp-max"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seanchatmangpt/lsp-max"

[dependencies]
lsp-max-protocol = { path = "../lsp-max-protocol", version = "26.6.9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.9.7", features = ["json"] }
