[package]
name = "lsp-max-macros"
version = "26.6.9"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Internal procedural macros for lsp-max"
edition = "2021"
rust-version = "1.70.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/seanchatmangpt/lsp-max"
repository = "https://github.com/seanchatmangpt/lsp-max"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
