[package]
name = "anti-llm-cheat-lsp"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Process-mining LSP server that detects LLM cheating patterns via OCEL 2.0, Declare constraints, and alignment-backed conformance checking"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories = ["development-tools", "command-line-utilities"]
keywords = ["lsp", "process-mining", "anti-cheat", "conformance", "ocel"]
publish = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap-noun-verb = "26.6.2"
clap-noun-verb-macros = "26.6.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
glob = "0.3"
aho-corasick = "1"
ignore = "0.4"
memchr = "2.5"
rustc-hash = { workspace = true }
lsp-max = { path = "../../", version = "26.6.18" }
lsp-max-ast = { path = "../../crates/lsp-max-adapters/lsp-max-ast", version = "26.6.18" }
lsp-max-ast-core = { path = "../../crates/lsp-max-adapters/lsp-max-ast-core", version = "26.6.18" }
parking_lot = { workspace = true }
lsp-types-max = { git = "https://github.com/seanchatmangpt/lsp-types-max", branch = "main", version = "26.6.5", features = ["proposed"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
tree-sitter = { workspace = true }
tree-sitter-rust = "0.24"
blake3 = "1"
wasm4pm-compat = { workspace = true }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2.2"
predicates = "3.1"
lsp-max-playground = { path = "../playground" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "perf_refactors"
harness = false
