[package]
name = "lsp-max-andon"
version = "26.7.1"
edition = "2021"
description = "ANDON layer for lsp-max: invariant registry, bus, analysis pipeline, LSP push adapter"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
lsp-types-max = { version = "26.6.24", features = ["proposed"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
