[package]
name = "lsp-max-anti-cheat-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Anti-LLM CLI: noun/verb interface for admissibility checks (tower-lsp refs, victory language, receipts, etc.)"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish = true

[[bin]]
name = "lsp-max-anti-cheat"
path = "src/main.rs"

[dependencies]
lsp-max-anti-cheat = { path = "../lsp-max-anti-cheat" }
clap-noun-verb = "26.6.2"
clap-noun-verb-macros = "26.6.2"
linkme = "0.3"
tokio = { version = "1", features = ["fs", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
colored = "2"

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
