[package]
name = "lsp-max-anti-cheat"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Anti-LLM admissibility detection library: detects tower-lsp, victory language, fake receipts, contract violations"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
glob = "0.3"
aho-corasick = "1"
ignore = "0.4"
memchr = "2.5"
rustc-hash = { workspace = true }
parking_lot = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
tree-sitter = { workspace = true }
tree-sitter-rust = "0.24"
blake3 = "1"
wasm4pm-compat = { workspace = true }

[dev-dependencies]
tempfile = "3"
