[package]
name = "lsp-max-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Actuation grammar CLI for lsp-max: noun/verb surface built on clap-noun-verb"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "lsp_max_cli"
path = "src/lib.rs"

[[bin]]
name = "lsp-max-cli"
path = "src/main.rs"

[[bin]]
name = "lsp-coverage"
path = "src/bin/lsp-coverage.rs"

[[bin]]
name = "lsp-max-specgen"
path = "src/bin/lsp-max-specgen/main.rs"

[[bin]]
name = "lsp-max-meta"
path = "src/bin/lsp-max-meta/main.rs"

[[bin]]
name = "lsp-max-mcp"
path = "src/bin/lsp-max-mcp.rs"

[dependencies]
anyhow = "1"
colored = "2"
chrono = { version = "0.4", features = ["clock"] }
clap-noun-verb = "26.6.2"
clap-noun-verb-macros = "26.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
linkme = "0.3.36"
lsp-max = { path = "../..", version = "26.6.24" }
lsp-max-protocol = { path = "../../lsp-max-protocol", version = "26.6.24" }
lsp-types-max = { version = "26.6.24" }
thiserror = "1"
heck = "0.5"
tera = "1.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Absorbed from lsp-max-gen
toml = "0.8"
walkdir = { workspace = true }

# Absorbed from lsp-max-client
lsp-max-macros = { path = "../../lsp-max-macros", version = "26.6.24" }
tower = { version = "0.4", features = ["util"] }
async-trait = "0.1"
futures = "0.3"

# Absorbed from lsp-max-specgen
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

# Absorbed from lsp-max-meta
dashmap = { workspace = true }

# Absorbed from lsp-max-mcp
lsp-max-compositor = { path = "../lsp-max-compositor" }

[features]
default = ["gen", "client"]
gen = []
client = []

[dev-dependencies]
tempfile = "3"
