[package]
name = "lsp-max-compositor-routing"
version.workspace = true
edition.workspace = true
description = "Routing layer for lsp-max-compositor — zero heavy deps, fully testable without sibling repos"

[dependencies]
dashmap.workspace = true
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
toml = "0.8"
