[package]
name = "lsp-max-compositor"
version = "26.6.9"
edition = "2021"

[[bin]]
name = "lsp-max-compositor"
path = "src/main.rs"

[dependencies]
lsp-max = { path = "../.." }
lsp-max-protocol = { path = "../../lsp-max-protocol" }
lsp-max-runtime = { path = "../../lsp-max-runtime" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
dashmap = "5"
