[package]
name = "lsp-max-compositor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lsp-max-compositor"
path = "src/main.rs"

[[bin]]
name = "lsp-echo-server"
path = "src/bin/lsp_echo_server.rs"

[[bench]]
name = "compositor_micro"
harness = false

[[bench]]
name = "compositor_fanout"
harness = false

[[bench]]
name = "compositor_backpressure"
harness = false

[[bench]]
name = "process_mining"
harness = false

[dependencies]
lsp-max = { path = "../.." }
lsp-max-client = { path = "../../crates/lsp-max-client" }
lsp-max-protocol = { path = "../../lsp-max-protocol" }
lsp-max-runtime = { path = "../../lsp-max-runtime" }
wasm4pm = { path = "/home/user/wasm4pm/wasm4pm" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
dashmap.workspace = true
anyhow = "1"
blake3 = "1"
daachorse = "3.0.2"
kanal = { version = "0.1", features = ["async"] }
papaya = "0.2.4"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
