[package]
name = "lsp-max-compositor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lsp-max-compositor"
path = "src/main.rs"
required-features = ["full"]

[[bin]]
name = "lsp-echo-server"
path = "src/bin/lsp_echo_server.rs"
required-features = ["full"]

[[bench]]
name = "compositor_micro"
harness = false
required-features = ["full"]

[[bench]]
name = "compositor_fanout"
harness = false
required-features = ["full"]

[[bench]]
name = "compositor_backpressure"
harness = false
required-features = ["full"]

[[bench]]
name = "process_mining"
harness = false
required-features = ["full"]

[features]
default = ["full"]
full = [
    "dep:lsp-max",
    "dep:lsp-max-protocol",
    "dep:wasm4pm",
]

[dependencies]
lsp-max = { path = "../..", optional = true }
lsp-max-protocol = { path = "../../lsp-max-protocol", optional = true }
wasm4pm = { version = "26.6.11", optional = true }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
dashmap.workspace = true
anyhow = "1"
blake3 = "1"
daachorse = "3.0.2"
kanal = { version = "0.1", features = ["async"] }
papaya = "0.2.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
uuid = { version = "1.0", features = ["v4"] }
parking_lot = { workspace = true }
chicago-tdd-tools = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
