[package]
name = "lsp-max-gen"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Rails-style LSP scaffold generator engine for lsp-max"
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tera = "1.20"
heck = "0.5"
thiserror = "1"
walkdir = { workspace = true }

[dev-dependencies]
tempfile = "3"
