[package]
name = "lsp-max-lsif"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "LSIF export and conformance for lsp-max"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
lsp-types-max = { version = "26.6.24" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

lsp-max-ast = { version = "26.6.26", path = "../lsp-max-adapters/lsp-max-ast", optional = true }
tree-sitter = { version = "0.26.9", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }

[build-dependencies]
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"

[features]
default = ["rust", "typescript"]
rust = ["dep:lsp-max-ast", "dep:tree-sitter", "dep:tree-sitter-rust"]
typescript = ["dep:lsp-max-ast", "dep:tree-sitter", "dep:tree-sitter-typescript"]

[[bin]]
name = "lsp-max-lsif"
path = "src/bin/lsif_cli.rs"
