[package]
name = "lsp-max-mcp"
version.workspace = true
edition.workspace = true
description = "MCP server exposing lsp-max routing tools: lsp_discover, lsp_route, lsp_health, lsp_reload_config"

[[bin]]
name = "lsp-max-mcp"
path = "src/main.rs"

[dependencies]
lsp-max-compositor-routing = { path = "../lsp-max-compositor-routing" }
lsp-max-protocol = { path = "../../lsp-max-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
