[package]
name = "test-analyzer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Test pattern analyzer and falsification detector for Rust projects"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "test-analyzer"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = { workspace = true }
syn = { version = "2", features = ["full"] }
walkdir = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
proc-macro2 = "1"
quote = "1"
