[package]
name = "lsp-max-cli"
version = "26.6.9"
edition = "2021"

[dependencies]
clap-noun-verb = "26.6.2"
clap-noun-verb-macros = "26.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }
linkme = "0.3.36"
lsp-max = { path = "../.." }
lsp-max-protocol = { path = "../../lsp-max-protocol" }
lsp-types-max = { path = "../../../lsp-types-max" }
lsp-max-agent = { path = "../../lsp-max-agent", version = "26.6.9" }
lsp-max-runtime = { path = "../../lsp-max-runtime", version = "26.6.9" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = "3"