[package]
name = "lsp-max-scaffold"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Law-state LSP scaffold: five-layer model, noun/verb CLI, receipt-chain admission"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clap-noun-verb = "26.6.2"
clap-noun-verb-macros = "26.6.2"
linkme = "0.3"
lsp-max = { path = "../../" }
lsp-max-protocol = { path = "../../lsp-max-protocol" }
lsp-max-runtime = { path = "../../lsp-max-runtime" }
lsp-types-max = { path = "../../stub/lsp-types-max", version = "26.6.8", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1"
tokio = { version = "1", features = ["full", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "lsp-max-scaffold"
path = "src/main.rs"
