[package]
name = "lsp-max-ast"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
lsp-max-ast-core = { path = "../lsp-max-ast-core" }
lsp-types-max = { workspace = true }
texter = { workspace = true }
tree-sitter = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
