[package]
name = "lsp-max-ast"
version = "26.6.9"
description = "AST layer for lsp-max via tree-sitter"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
lsp-max-ast-core = { path = "../lsp-max-ast-core", version = "26.6.9" }
lsp-types-max = { workspace = true }
texter = { workspace = true }
tree-sitter = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
